<resources>
    <string name="app_name">ScanQrCode</string>

    <!--相机页-->
    <string name="frame_info">Align the QRcode within the frame to scan</string>
    <string name="scan_wechat">WeChat Scanner</string>
    <string name="scan_alipay">Alipay Scanner</string>

    <!--结果页-->
    <string name="result_copy">Copy</string>
    <string name="result_share">Share</string>
    <string name="result_open">Open</string>

    <!--设置页-->
    <string name="pref_cate_action">Quick Setting Tile Action</string>
    <string name="pref_action_click">Cilck</string>
    <string name="pref_action_longclick">Press</string>

    <string name="pref_action_camera">Scan Camera</string>
    <string name="pref_action_screen">Scan Screen</string>
    <string name="pref_action_wechat">WeChat Scanner</string>
    <string name="pref_action_alipay">Alipay Scanner</string>
    <string name="pref_action_settings">Open Settings</string>
    <string name="pref_action_gallery">Open Gallery</string>
    <string-array name="pref_action">
        <item>@string/pref_action_camera</item>
        <item>@string/pref_action_screen</item>
        <item>@string/pref_action_wechat</item>
        <item>@string/pref_action_alipay</item>
        <item>@string/pref_action_settings</item>
        <item>@string/pref_action_gallery</item>
    </string-array>
    <string-array name="pref_action_value">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="pref_cate_other">Miscellaneous</string>
    <string name="pref_open_direct">Open directly</string>
    <string name="pref_hide_share">Hide from Share List</string>
    <string name="pref_hide_launcher">Hide from Launcher</string>
    <string name="pref_cate_about">About</string>
    <string name="pref_version_code">Version</string>

    <!--关于页-->
    <string name="about_dialog_title">About</string>
    <string name="about_dialog_message">Cilck Quick Setting Tile to scan QRcode from camera/Screen\nAutomatically scan Share/Open Image\n\nOpen Source Licenses\nzxing:APL 2.0</string>
    <string name="about_dialog_support">Donate</string>
    <string name="about_dialog_github">GitHub</string>
    <string name="about_dialog_button">OK</string>

    <string name="toast_no_wechat">Cannot find WeChat</string>
    <string name="toast_no_alipay">Cannot find Alipay</string>
    <string name="toast_copied">Finish copy %s to Clipboard</string>
    <string name="toast_no_result">Cannot find QRcode</string>
    <string name="toast_no_permit">Missing permissions</string>
</resources>
