<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.inklin.qrcodescanner.CameraView
        android:id="@+id/camera"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center" />
    <LinearLayout
        android:id="@+id/actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:fitsSystemWindows="true"
        android:clipToPadding="false"
        android:background="@color/cameraAction">
        <TextView
            android:id="@+id/run_wechat"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="@drawable/ripple_rect"
            android:gravity="center"
            android:clickable="true"
            android:text="@string/scan_wechat" />
        <TextView
            android:id="@+id/run_alipay"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="@drawable/ripple_rect"
            android:gravity="center"
            android:clickable="true"
            android:text="@string/scan_alipay" />
    </LinearLayout>
    <View
        android:id="@+id/mask_status"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/cameraMask"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/mask_status"
        android:layout_above="@id/actions">
        <LinearLayout
            android:id="@+id/mask_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">
            <View
                android:id="@+id/scan_frame"
                android:layout_width="256dp"
                android:layout_height="256dp"
                android:background="@drawable/scan_frame"/>
            <TextView
                android:id="@+id/textinfo"
                android:gravity="center"
                android:background="@color/cameraMask"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:text="@string/frame_info" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/mask_frame"
            android:background="@color/cameraMask"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignTop="@id/mask_frame"
            android:layout_alignBottom="@id/mask_frame"
            android:layout_toStartOf="@id/mask_frame"
            android:background="@color/cameraMask"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignTop="@id/mask_frame"
            android:layout_alignBottom="@id/mask_frame"
            android:layout_toEndOf="@id/mask_frame"
            android:background="@color/cameraMask"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/mask_frame"
            android:background="@color/cameraMask"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/mask_status"
        android:padding="6dp"
        android:background="@android:color/transparent">
        <FrameLayout
            android:id="@+id/gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:layout_margin="6dp"
            android:background="@drawable/ripple_circle"
            android:clickable="true">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_image" />
        </FrameLayout>
        <FrameLayout
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:layout_margin="6dp"
            android:background="@drawable/ripple_circle"
            android:clickable="true">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_settings" />
        </FrameLayout>
    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/actions"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-30dp"
        android:clickable="true"
        app:fabSize="normal"
        app:backgroundTint="@android:color/black"
        app:rippleColor="@color/transparent"
        app:srcCompat="@drawable/ic_light" />
</RelativeLayout>
